# CropSentinel

./: .env.example  API_CONTRACT.md  App.js  README.md  TESTING_GUIDE.md  app.json  package-lock.json  package.json  pyproject.toml  task.md  walkthrough.md
app/: main.py
app/agents/: alert.py  coordinator.py  intervention.py  market.py  satellite.py  soil.py  weather.py
app/api/: analysis.py  auth.py  farm.py  health.py  risk.py
app/db/: __init__.py  database.py  models.py
app/services/: market_service.py  sentinel_service.py  soil_service.py  weather_service.py
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py
backend/cropsentinel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: backfill_farms.py
backend/tests/: deployment_readiness_test.py  final_hackathon_test.py
docs/: PROJECT_SUMMARY.md  QUICKSTART.md  RELEASE_NOTES.md  TESTING_GUIDE.md
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  I18nContext.jsx  index.css  main.jsx
mobile/: App.js
src/components/: DemoBanner.js
src/config/: demoState.js  environment.js
src/constants/: mockData.js  translations.js
src/screens/: AboutScreen.js  AccountSettingsScreen.js  AddFieldScreen.js  AddFieldScreen.jsx  AlertsFeedScreen.js  FarmDetailScreen.js  FarmsListScreen.jsx  FarmsScreen.js  FarmsScreen.jsx  HelpSupportScreen.js  InterventionDetailScreen.js  LocationPickerScreen.js  LoginScreen.js  MyFarmsScreen.js  NotificationSettingsScreen.js  OnboardingScreen.js  ProfileScreen.jsx  (+1 more)
tests/: README.md
(+59 files in other folders)
