[project]
name = "cropsentinel"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
    "groq>=0.9.0",
    "langgraph>=1.2.4",
    "pyjwt>=2.13.0",
]
